[project]
name = "LN-IO-h5-csv"
dynamic = ['version']
description = "LiveNodes: node based live streaming sensor/data and visualization suite."
authors = [
    { name = "Yale Hartmann", email = "yale.hartmann@uni-bremen.de" }
]
# TODO: figure out how/if to add livenodes here... for now install manually in venv via:
# pip install . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
# pip install -e . --extra-index-url https://package_puller:8qYs4hBAsmAHJ5AdS_y9@gitlab.csl.uni-bremen.de/api/v4/groups/368/-/packages/pypi/simple
dependencies = [
    "livenodes>=v0.12.1b1",
    "ln_ports>=0.12.1b1",
    "livenodes_io_python",
    "numpy>=1.24.4",
    "tsfel",
    "h5py",
    "joblib>=1.4.2",
    "pyarrow>=16.0.0"
]

[project.entry-points."livenodes.nodes"]
in_h5_csv = "livenodes_io_h5_csv.in_h5_csv:In_h5_csv"
in_playback_h5_csv = "livenodes_io_h5_csv.in_playback_h5_csv:In_playback_h5_csv"
out_h5_csv = "livenodes_io_h5_csv.out_h5_csv:Out_h5_csv"
annotate_channel = "livenodes_io_h5_csv.annotate_channel:Annotate_channel"

[project.optional-dependencies]
dev = [
    "tox",
    "pytest>=8.2.2"
]

[build-system]
requires = [
    "setuptools>=60.0.0",
    "wheel",
    "setuptools_scm >= 3.0.0",
    "setuptools-git-versioning"
]
build-backend = 'setuptools.build_meta'

[tool.setuptools-git-versioning]
enabled = true

[tool.black]
line-length = 180
target-version = ['py312']
skip-string-normalization = true
